[package]
name = "library-tool"
version = "0.1.5"
authors = ["Spxg <itsme@unsafe.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.4.2"
structopt = "0.3"
structopt-derive = "0.4"
serde_json = "1.0.59"

[dependencies.reqwest]
version = "0.10"
features = ["blocking", "json", "cookies"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[profile.release]
lto = "fat"